se agregan 3 pruebas unitarias adicionales